# eddist

./: .docker-compose.env  .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  biome.json  captcha-config.example.json  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
eddist-admin/: Cargo.toml  openapi.json
eddist-admin/client/: .gitignore  README.MD  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
eddist-admin/client/.flowbite-react/: class-list.json  config.json
eddist-admin/client/app/: root.tsx  routes.ts
eddist-admin/client/app/components/: BoardItem.tsx  BoardMultiSelect.tsx  BoardSetting.tsx  Breadcrumb.tsx  CaptchaConfigForm.tsx  CreateBoardModal.tsx  CreateCapModal.tsx  CreateNgWordModal.tsx  DatArchiveResponseList.tsx  EditCapModal.tsx  NoticeForm.tsx  (+4 more)
eddist-admin/client/src/: App.tsx  Routes.tsx  index.tsx
eddist-admin/src/: api_doc.rs  auth.rs  error.rs  graphql.rs  main.rs  repository.rs  utils.rs
eddist-admin/src/models/: auth.rs  board.rs  captcha.rs  idp.rs  mod.rs  moderation.rs  notice.rs  response.rs  server_settings.rs  terms.rs  thread.rs  user.rs
eddist-admin/src/repository/: admin_archive_repository.rs  admin_bbs_repository.rs  admin_board_repository.rs  admin_repository.rs  admin_response_repository.rs  admin_thread_repository.rs  admin_user_repository.rs  authed_token_repository.rs  cap_repository.rs  captcha_config_repository.rs  idp_repository.rs  ngword_repository.rs  notice_repository.rs  plugin_repository.rs  server_settings_repository.rs  terms_repository.rs  user_restriction_repository.rs
eddist-admin/src/routes/: archives.rs  auth_tokens.rs  boards.rs  captcha.rs  idps.rs  internal.rs  mod.rs  moderation.rs  notices.rs  plugins.rs  server_settings.rs  terms.rs  threads.rs  users.rs
eddist-admin/src/services/: archive_service.rs  authed_token_service.rs  board_service.rs  content_admin_service.rs  mod.rs  moderation_service.rs  thread_service.rs  user_service.rs
eddist-cli/: Cargo.toml  build.rs
eddist-cli/src/: main.rs  migrate.rs
eddist-core/: Cargo.toml  build.rs
eddist-core/proto/: bbs_events.proto
eddist-core/src/: cache_aside.rs  lib.rs  redis_keys.rs  server_settings.rs  simple_rate_limiter.rs  symmetric.rs  tracing.rs  utils.rs
eddist-core/src/domain/: authed_token_backup.rs  board.rs  client_info.rs  ip_addr.rs  metadent.rs  notice.rs  pubsub_repository.rs  repository.rs  res.rs  sjis_str.rs  terms.rs  tinker.rs  user_restriction.rs  user_restriction_filter.rs
eddist-core/src/proto/: mod.rs
eddist-cron/: Cargo.toml  build.rs
eddist-cron/src/: main.rs  repository.rs
eddist-persistence/: Cargo.toml
eddist-persistence/src/: main.rs  persistence.rs  shutdown.rs  subscriber.rs  token_backup.rs
eddist-server/: Cargo.toml  PLUGINS.md  PLUGIN_TESTING.md
eddist-server/client/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
eddist-server/client-v2/: .env.local  Dockerfile  instrumentation.js  package.json  server.js  tsconfig.json  vite.config.ts
eddist-server/client-v2/app/: entry.server.tsx  root.tsx  routes.ts
eddist-server/client-v2/server/: app.ts
eddist-server/client/src/: AuthCodeModal.tsx  ErrorModal.tsx  PostResponseModal.tsx  PostThreadModal.tsx  ThreadListPage.tsx  ThreadPage.tsx  TopPage.tsx  index.css  main.tsx  utils.ts
eddist-server/examples/plugins/: 01_spam_filter.sql  02_profanity_replacer.sql  03_content_logger.sql  04_post_counter.sql  README.md
eddist-server/resources/: templates.local.toml  templates.prod.toml
eddist-server/resources/templates/: auth-code.get.hbs  auth-code.post.failed.hbs  auth-code.post.success.hbs  re-auth.get.hbs  re-auth.post.failed.hbs  re-auth.post.success.hbs  setting-txt.get.hbs  term-of-usage.get.hbs  user-link-idp-selection.get.hbs  user-page-simple.get.hbs
eddist-server/src/: app.rs  error.rs  lib.rs  main.rs  services.rs  shiftjis.rs  template.rs  utils.rs
eddist-server/src/domain/: authed_token.rs  board.rs  cap.rs  captcha_like.rs  ip_addr.rs  metadent.rs  ng_word.rs  res.rs  res_core.rs  thread.rs  thread_list.rs  thread_res_list.rs  tinker.rs  utils.rs
eddist-server/src/middleware/: mod.rs  not_found_rate_limit.rs  user_restriction.rs
eddist-server/src/plugin/: api.rs  hooks.rs  http.rs  manager.rs  mod.rs  model.rs  sandbox.rs  storage.rs
eddist-server/src/repositories/: bbs_pubsub_repository.rs  bbs_repository.rs  captcha_config_repository.rs  idp_repository.rs  notice_repository.rs  stats_repository.rs  terms_repository.rs  trending_repository.rs  user_repository.rs  user_restriction_repository.rs
eddist-server/src/routes/: auth_code.rs  bbs_cgi.rs  captcha_config_api.rs  dat_routing.rs  ng_id.rs  notice.rs  plugins.rs  re_auth.rs  safe_mode.rs  stats.rs  subject_list.rs  terms.rs  trending.rs  user.rs  websocket.rs  websocket_manager.rs  ws.rs
eddist-server/src/services/: auth_with_code_service.rs  auth_with_code_user_page_service.rs  bind_token_to_user_service.rs  board_info_service.rs  captcha_config_cache.rs  edge_token_validation_service.rs  kako_thread_retrieval_service.rs  list_boards_service.rs  metadent_thread_list_service.rs  openai_moderation_service.rs  post_captcha_verification.rs  reauth_service.rs  res_creation_service.rs  server_settings_cache.rs  stats_counter.rs  thread_creation_service.rs  thread_list_service.rs  thread_retrieval_service.rs  user_authz_idp_callback_service.rs  user_link_idp_redirection_service.rs  user_link_idp_selection_service.rs  user_login_idp_redirection_service.rs  user_login_page_service.rs  user_logout_service.rs  user_page_service.rs  user_reg_authz_idp_callback_service.rs  user_reg_idp_redirection_service.rs  user_reg_temp_url_service.rs  user_restriction_service.rs  validation.rs
eddist-server/src/templates/: auth-code.get.hbs  auth-code.post.failed.hbs  auth-code.post.success.hbs  login-idp-selection.get.hbs  term-of-usage.get.hbs  user-page-simple.get.hbs  user-reg-temp-url.get.hbs
eddist-server/tests/: integration_test.rs
eddist-server/tests/common/: mod.rs
(+427 files in other folders)
