[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[workspace]
members = [
    "eddist-admin",
    "eddist-core",
    "eddist-cron",
    "eddist-persistence",
    "eddist-cli",
    "eddist-server",
]
resolver = "2"

[workspace.dependencies]
# Core utilities
anyhow = "1.0.102"
thiserror = "2.0.18"
log = "0.4.29"
dotenvy = "0.15.7"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.0"

# Web framework
axum = "0.8.8"
axum-extra = { version = "0.10.3", features = ["cookie"] }
tower = "0.5.3"
tower-http = { version = "0.6.8" }
tower-layer = "0.3.3"
hyper = "1.8.1"
hyper-util = "0.1.20"
http = "1.4.0"

# Database
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "macros",
    "chrono",
    "json",
    "uuid",
] }
redis = { version = "1.1.0", features = ["tokio-comp"] }

# HTTP client
# NOTE: reqwest is pinned to 0.12.x because oauth2 5.0.0 (latest) depends on reqwest 0.12.
# Upgrading to 0.13 causes a type mismatch: reqwest::Client no longer implements
# oauth2::AsyncHttpClient, breaking OIDC authentication. Revisit when oauth2 releases
# a version that supports reqwest 0.13.
reqwest = { version = "0.12.28", default-features = false, features = [
    "rustls-tls",
    "json",
] }

# Date/time
chrono = { version = "0.4.44", features = ["serde"] }
time = "0.3.47"

# UUID
uuid = { version = "1.22.0", features = ["v4", "v7", "serde"] }

# Encoding
encoding_rs = "0.8.35"
base64 = "0.22.1"

# Cryptography
sha3 = "0.10.8"
sha2 = "0.10.9"
sha1 = { version = "0.10.6", default-features = false }
md-5 = "0.10.6"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chacha20poly1305 = "0.10.1"
pwhash = "1.0.0"

# Cloud storage
rust-s3 = { version = "0.37.1", default-features = false, features = [
    "tokio-rustls-tls",
    "tags",
    "fail-on-err",
] }

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
axum-prometheus = "0.10.0"

# Misc
jsonpath-rust = "1.0.4"
regex = "1.12.3"
url = "2.5.8"
rand = "0.10.0"
ipnet = "2.12.0"
handlebars = "6.4.0"
cron = "0.16.0"

# Auth
openidconnect = "4.0.1"
oauth2 = { version = "5.0.0", features = ["reqwest"] }

# Testing
mockall = "0.14.0"
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["mysql", "redis"] }
axum-test = "19.1.1"

# Admin specific
utoipa = { version = "5.4.0", features = ["uuid", "axum_extras", "chrono"] }
tower-sessions = "0.15.0"
env_logger = "0.11.10"
tokio-util = "0.7.18"

# Allocator
mimalloc = { version = "0.1", default-features = false }

# Hashing
twox-hash = "2"

# Internal
eddist-core = { path = "eddist-core" }
