[package]
name = "eddist-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
log.workspace = true
tower-sessions.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http = { workspace = true, features = ["fs", "trace", "normalize-path"] }
tracing.workspace = true
uuid.workspace = true
oauth2.workspace = true
reqwest.workspace = true
time.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
redis = { workspace = true, features = ["connection-manager"] }
eddist-core.workspace = true
utoipa.workspace = true
tower-layer.workspace = true
rust-s3.workspace = true
encoding_rs.workspace = true
