[package]
name = "eddist-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
eddist-core.workspace = true
futures.workspace = true
chrono.workspace = true
dotenvy.workspace = true
rust-s3.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
