[package]
name = "eddist-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
chrono.workspace = true
# TODO: Remove this dependency and replace it with trait
redis.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true
encoding_rs.workspace = true
sha3.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
ipnet.workspace = true
