[package]
name = "eddist-cron"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
anyhow.workspace = true
cron.workspace = true
chrono.workspace = true
eddist-core.workspace = true
rust-s3.workspace = true
uuid.workspace = true
dotenvy.workspace = true
redis.workspace = true
log.workspace = true
encoding_rs = { workspace = true, features = ["fast-kanji-encode"] }
rand.workspace = true
futures.workspace = true
