[package]
name = "eddist-cron"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
anyhow.workspace = true
cron.workspace = true
chrono.workspace = true
eddist-core.workspace = true
aws-sdk-s3.workspace = true
uuid.workspace = true
dotenvy.workspace = true
redis = { workspace = true, features = ["connection-manager"] }
log.workspace = true
encoding_rs = { workspace = true, features = ["fast-kanji-encode"] }
rand.workspace = true
futures.workspace = true
