[package]
name = "eddist-persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
redis = { workspace = true, features = ["connection-manager"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
futures.workspace = true
eddist-core.workspace = true
tracing.workspace = true
hyper = { workspace = true, features = ["server", "http1"] }
hyper-util = { workspace = true, features = ["tokio"] }
log.workspace = true
