[package]
name = "eddist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
base64 = "0.22.1"
brotli = "6.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
encoding_rs = { version = "0.8.34", features = ["fast-kanji-encode"] }
env_logger = "0.11.3"
hyper = "1.4.0"
hyper-util = "0.1.6"
jsonwebtoken = "9.3.0"
log = "0.4.22"
md-5 = "0.10.6"
mockall = "0.12.1"
pwhash = "1.0.0"
rand = "0.8.5"
redis = { version = "0.25.4", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = { version = "1.0.118" }
sqlx = { version = "0.8.0", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "macros",
    "chrono",
    "json",
    "uuid",
] }
thiserror = "1.0.61"
time = "0.3.36"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
tower-http = { version = "0.5.2", features = [
    "compression-br",
    "compression-gzip",
    "trace",
    "timeout",
    "fs",
    "normalize-path",
] }
tracing = "0.1.40"
uuid = { version = "1.9.1", features = ["v4", "v7", "serde"] }
regex = "1.10.6"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "json",
    "charset",
] }
eddist-core = { path = "../eddist-core" }
sha3 = "0.10.8"
sha2 = "0.10.8"
jwt-simple = "0.12.9"
futures = "0.3.30"
handlebars = "6.1.0"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
axum-prometheus = "0.7.0"
sha1 = { version = "0.10.6", default-features = false }
rust-s3 = { version = "0.35.1", default-features = false, features = [
    "tokio-rustls-tls",
    "tags",
    "fail-on-err",
] }
http = "1.1.0"
tower = "0.5.1"
