[package]
name = "eddist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
chrono.workspace = true
dotenvy.workspace = true
encoding_rs = { workspace = true, features = ["fast-kanji-encode"] }
env_logger.workspace = true
hyper.workspace = true
hyper-util.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
md-5.workspace = true
mockall.workspace = true
pwhash.workspace = true
rand.workspace = true
redis = { workspace = true, features = ["connection-manager"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http = { workspace = true, features = [
    "compression-br",
    "compression-gzip",
    "trace",
    "timeout",
    "fs",
    "normalize-path",
    "catch-panic",
] }
tracing.workspace = true
uuid.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["charset"] }
eddist-core.workspace = true
sha3.workspace = true
sha2.workspace = true
futures.workspace = true
handlebars.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
axum-prometheus.workspace = true
sha1.workspace = true
rust-s3.workspace = true
http.workspace = true
tower.workspace = true
openidconnect.workspace = true
url.workspace = true
chacha20poly1305.workspace = true
toml.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
axum-test.workspace = true
